# security-skunkworks

./: LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
assets/: AGENTS.security-skunkworks.md  README.security-skunkworks.md  SECURITY.md  agent-task.md  docs-compliance-matrix.md  docs-security-architecture.md  docs-security-requirements.md  docs-security-test-plan.md  final-report.md  fixation-plan.md  repo-profile.md  security-skunkworks.yaml
references/: compliance-baseline.md  copied-repo-pilot.md  dart-flutter-playbook.md  gate-policy.md  js-ts-playbook.md  python-playbook.md  scanner-prerequisites.md  support-matrix.md
schemas/: finding.schema.json  ledger.schema.json  run-manifest.schema.json
scripts/: analyzer.py  configuration.py  models.py  requirements_engine.py  scanners.py  security_workflow.py  validate_skill.py  verification.py  workspace.py
tests/: support.py  test_analyzer.py  test_cli.py  test_configuration.py  test_golden_outputs.py  test_requirements_engine.py  test_scanners.py  test_verification.py
tests/fixtures/flutter-firebase-pnpm-risky/: pubspec.yaml
tests/fixtures/flutter-firebase-pnpm-safe/: codemagic.yaml  package.json  pubspec.yaml
tests/fixtures/frontend-app/: package.json  src.tsx
tests/fixtures/js-api/: Dockerfile  index.js  package.json
tests/fixtures/js-api-pnpm/: package.json
tests/fixtures/js-api-safe/: index.js  package.json
tests/fixtures/python-api/: app.py  (+1 more)
tests/fixtures/python-api-poetry/: pyproject.toml
tests/golden/: ledger.json  run-manifest.json
(+15 files in other folders)
